Mobile Menu Button text wrap Fix

--- a/style.css
+++ b/style.css
@@ -3079,6 +3079,7 @@ p .alignnone {
   display: none;
   color: inherit;
   font-size: 16px;
+  white-space: nowrap;
 }
 
 .mobile-nav-trigger:hover {
